--- a/src/blob/CMakeLists.txt
+++ b/src/blob/CMakeLists.txt
@@ -3,4 +3,9 @@ add_subdirectory(lib)
 add_executable(blob
     main.cpp
 )
-target_link_libraries(blob PRIVATE arg blob-lib)
+target_link_libraries(blob PRIVATE
+    arg
+    blob-lib
+    fi
+    nlohmann_json::nlohmann_json
+)
