Prototype resource loading

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,12 @@
 [submodule "src/fi"]
 	path = src/fi
 	url = https://github.com/snailbaron/fi.git
+[submodule "src/thing"]
+	path = src/thing
+	url = https://github.com/snailbaron/thing.git
+[submodule "src/evening"]
+	path = src/evening
+	url = https://github.com/snailbaron/evening.git
+[submodule "deps/SDL_image"]
+	path = deps/SDL_image
+	url = https://github.com/libsdl-org/SDL_image.git
