--- a/src/touch/CMakeLists.txt
+++ b/src/touch/CMakeLists.txt
@@ -1,7 +1,11 @@
 add_executable(touch
     main.cpp
+    view.cpp
+    world.cpp
 )
 target_link_libraries(touch PRIVATE
+    as
+    evening
     fi
     tempo
     thing
