--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(json)
 add_subdirectory(yaml-cpp)
 
 include(ExternalProject)
+
 ExternalProject_Add(
     lmms-project
     GIT_REPOSITORY https://github.com/LMMS/lmms.git
@@ -31,3 +32,21 @@ add_executable(lmms IMPORTED GLOBAL)
 set_target_properties(lmms PROPERTIES
     IMPORTED_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/lmms/bin/lmms"
 )
+
+ExternalProject_Add(
+    tiled-project
+    GIT_REPOSITORY https://github.com/mapeditor/tiled.git
+    GIT_TAG 3b2a3c47cb1c8affe59865f671663b7c6ca2e8ef
+    GIT_SHALLOW ON
+    UPDATE_COMMAND ""
+    BUILD_IN_SOURCE ON
+    CONFIGURE_COMMAND qbs setup-toolchains --detect
+        COMMAND qbs setup-qt --detect
+    BUILD_COMMAND qbs
+    INSTALL_COMMAND
+        qbs install --install-root "${CMAKE_CURRENT_BINARY_DIR}/tiled"
+)
+add_executable(tiled IMPORTED GLOBAL)
+set_target_properties(tiled PROPERTIES
+    IMPORTED_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/tiled/usr/local/bin/tiled")
+
