--- a/src/blob/lib/CMakeLists.txt
+++ b/src/blob/lib/CMakeLists.txt
@@ -4,6 +4,8 @@ add_custom_command(
         $<TARGET_FILE:flatc>
         -o include/blob
         --cpp
+        --scoped-enums
+        --no-emit-min-max-enum-values
         ${CMAKE_CURRENT_SOURCE_DIR}/format.fbs
     DEPENDS format.fbs
     OUTPUT include/blob/format_generated.h
@@ -22,4 +24,4 @@ target_include_directories(blob-lib PUBLIC
     include
     ${CMAKE_CURRENT_BINARY_DIR}/include
 )
-target_link_libraries(blob-lib PRIVATE fi)
+target_link_libraries(blob-lib PRIVATE fi flatbuffers)
